--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "test": "jasmine tests/",
-    "start:dev": "git add . && git-cz && git push -u origin master"
+    "commit": "git add . && git-cz && git push -u origin master"
   },
   "keywords": [
     "express",
